less clamp values

--- a/desktop_stylesheet.css
+++ b/desktop_stylesheet.css
@@ -77,15 +77,15 @@ a:hover {
 }
 
 .hero-container h1 { 
-	font-size: clamp(1.8rem, 5vw, 2.5rem); 
+	font-size: 32px;
 }
 
 .hero-container h2 { 
-	font-size: clamp(1.2rem, 4vw, 1.75rem); 
+	font-size: 28px;
 }
 
 .hero-container p  { 
-	font-size: clamp(1rem, 2.5vw, 1.25rem); 
+	font-size: 24px;
 }
 
 .hero-text {
@@ -99,7 +99,7 @@ a:hover {
     border-radius: 20px;
     object-fit: cover;
     box-shadow: 5px 5px 0px 0px #D84040;
-    margin-left: clamp(1rem, 1vw, 2rem);
+    margin-left: 2em;
 }
 
 .highlights-container {
@@ -116,7 +116,7 @@ a:hover {
 #grid-item-text, 
 #grid-item-link {
     color: white;
-    font-size: clamp(0.05rem, 1vw, 3.5rem);
+    font-size: 24px;
 }
 
 .grid-item {
@@ -166,23 +166,11 @@ h1 {
 footer {
 	position: fixed;	
 	bottom: 0;
-	padding-top: clamp(0.1rem, 1.5vw, 1.5rem);
-	padding-bottom: clamp(0.1rem, 1.5vw, 1.5rem);
+	padding-top: 2em;
+	padding-bottom: 2em;
 	width: 100%;
 	justify-items: center;
   	border-top: 1px solid #202020;
   	color: #505050;
   	background-color: #101010;
-}
-
-@media (max-width: 900px) {
-    .hero-container { 
-        flex-direction: column;
-        text-align: center; 
-    }
-    .hero-text { 
-    	margin: 0; 
-    }
-
-
 }
