--- a/desktop_stylesheet.css
+++ b/desktop_stylesheet.css
@@ -26,8 +26,8 @@ nav {
 	float: left;
 	list-style-type: none;
 	width: 100%;
-	padding-top: clamp(1rem, 2vw, 2.5rem);
-	padding-bottom: clamp(1rem, 2vw, 2.5rem);
+	padding-top: 2em;
+	padding-bottom: 2em;
 	background-color: rgba(16, 16, 16, 0.75);
 	box-shadow: 0px 5px 5px 0px black;	
 }
@@ -35,6 +35,7 @@ nav {
 #dt {
 	padding: 0;
 	margin: 0;
+	margin-left: 1em;
 	float: left;
 	font-size: 1.25em;
 }
@@ -44,7 +45,7 @@ ul {
 	padding: 0;
 	margin: 0;
 	list-style-type: none;
-	font-size: clamp(0.5rem, 0.75vw, 2rem);
+	font-size: 18px;
 }
 
 a {
@@ -116,7 +117,8 @@ a:hover {
 #grid-item-text, 
 #grid-item-link {
     color: white;
-    font-size: 24px;
+    font-size: 18px;
+    padding: 5px;
 }
 
 .grid-item {
@@ -166,11 +168,39 @@ h1 {
 footer {
 	position: fixed;	
 	bottom: 0;
-	padding-top: 2em;
-	padding-bottom: 2em;
+	padding-top: 1em;
+	padding-bottom: 1em;
 	width: 100%;
 	justify-items: center;
   	border-top: 1px solid #202020;
   	color: #505050;
   	background-color: #101010;
+}
+
+/* Mobile Phones */
+@media screen and (max-width: 640px) {
+  body {
+    font-size: 14px;
+  }
+  .hero-container {
+  	flex-direction: column; 
+  	text-align: center; 
+  } 
+  	.hero-text {
+  		margin: 0; 
+  	} 
+}
+
+/* Tablets */
+@media screen and (min-width: 641px) and (max-width: 1024px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+/* Desktops */
+@media screen and (min-width: 1025px) {
+  body {
+    font-size: 18px;
+  }
 }
