--- a/desktop_stylesheet.css
+++ b/desktop_stylesheet.css
@@ -45,7 +45,7 @@ ul {
 	padding: 0;
 	margin: 0;
 	list-style-type: none;
-	font-size: 18px;
+	font-size: 16px;
 }
 
 a {
@@ -179,28 +179,40 @@ footer {
 
 /* Mobile Phones */
 @media screen and (max-width: 640px) {
-  body {
-    font-size: 14px;
-  }
-  .hero-container {
-  	flex-direction: column; 
-  	text-align: center; 
-  } 
-  	.hero-text {
-  		margin: 0; 
-  	} 
-}
+    body {
+        font-size: 14px;
+    }
 
-/* Tablets */
-@media screen and (min-width: 641px) and (max-width: 1024px) {
-  body {
-    font-size: 16px;
-  }
-}
+    .hero-image img {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+        margin: 1em auto;
+    }
 
-/* Desktops */
-@media screen and (min-width: 1025px) {
-  body {
-    font-size: 18px;
-  }
+    .hero-container {
+        flex-direction: column;
+    	text-align: center;
+    	padding-top: 6em; /* instead of 10em */
+    	margin-bottom: 1.5em;
+    }
+
+    .hero-text {
+        margin: 0;
+    }
+
+	ul {
+	    width: 100%;
+	    padding: 0;
+	    margin: 0;
+	    list-style-type: none;
+	    font-size: 16px;
+	}
+
+	nav ul {
+	    display: flex;
+	    flex-direction: column;
+	    align-items: center;
+	    gap: 0.5em;
+	}
 }
