--- a/desktop_stylesheet.css
+++ b/desktop_stylesheet.css
@@ -15,7 +15,6 @@ body {
 	font-family: Arial;
 	background-color: #101010;
 	color: white;
-	padding-bottom: 80px;
 	margin: 0;
 }
 
@@ -67,7 +66,7 @@ a:hover {
 }
 
 .hero-container {
-	padding-top: 10em;
+	padding-top: 7em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -213,8 +212,8 @@ footer {
 		float: left;
 		list-style-type: none;
 		width: 100%;
-		padding-top: 0.5em;
-		padding-bottom: 0.5em;
+		padding-top: 2em;
+		padding-bottom: 2em;
 	}
 
 	ul {
@@ -222,7 +221,7 @@ footer {
 		padding: 0;
 		margin: 0;
 		list-style-type: none;
-		font-size: 0.5em;
+		font-size: clamp(0.75rem, 0.75vw, 2rem);
 	}
 
 	.nav-container,
@@ -235,10 +234,13 @@ footer {
 		justify-items: center;
 		padding-top: 0.025rem;
 		padding-bottom: 0.025rem;
+		bottom: 0;
+		position: relative;
 	}
 
 	.grid-container {
 	    grid-template-columns: 1fr;
 	    gap: 1em;
+	    padding-bottom: 1em;
 	}
 }
