--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,6 @@ nav {
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	float: left;
 	list-style-type: none;
 	width: 100%;
 	padding-top: 2em;
@@ -31,27 +30,25 @@ nav {
 	box-shadow: 0px 5px 5px 0px black;	
 }
 
-#dt {
-	padding: 0;
+ol {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1em;
 	margin: 0;
-	margin-left: 1em;
-	float: left;
-	font-size: 1.25em;
+	padding: 0;
+	list-style-type: none;
 }
 
-ul {
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	list-style-type: none;
-	font-size: 16px;
+#dt {
+	margin-right: auto;
+	font-size: 1.25em;
 }
 
 a {
-	float: right;
+	float: none;
 	text-decoration: none;
 	font-size: 1.25em;
-	margin-right: 1em;	
 }
 
 a:hover {
@@ -217,7 +214,7 @@ footer {
 		padding-bottom: 2em;
 	}
 
-	ul {
+	ol {
 		width: 100%;
 		padding: 0;
 		margin: 0;
