--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,15 +74,15 @@ a:hover {
 }
 
 .hero-container h1 { 
-	font-size: 32px;
+	font-size: 2vw;
 }
 
 .hero-container h2 { 
-	font-size: 28px;
+	font-size: 1.5vw;
 }
 
 .hero-container p  { 
-	font-size: 24px;
+	font-size: 1vw;
 }
 
 .hero-text {
@@ -222,6 +222,24 @@ footer {
 		font-size: clamp(0.65rem, 0.65vw, 2rem);
 	}
 
+	.grid-container {
+	    grid-template-columns: 1fr;
+	    gap: 1em;
+	    padding-bottom: auto;
+	}
+
+	.hero-container h1 { 
+		font-size: 40px;
+	}
+
+	.hero-container h2 { 
+		font-size: 28px;
+	}
+
+	.hero-container p  { 
+		font-size: 20px;
+	}
+
 	.nav-container,
 	.hero-container,
 	.highlights-container {
@@ -233,13 +251,9 @@ footer {
 		padding-top: 0.025rem;
 		padding-bottom: 0.025rem;
 		bottom: 0;
-		margin: 0 auto;
+		margin: 1em auto;
 		position: relative;
 	}
 
-	.grid-container {
-	    grid-template-columns: 1fr;
-	    gap: 1em;
-	    padding-bottom: 1em;
-	}
+
 }
