--- a/stylesheet.css
+++ b/stylesheet.css
@@ -361,7 +361,6 @@ td.busy {
     background-color: #b9b9b9;
 }
 
-
 aside {
     margin-top: 1em;
 }
@@ -370,6 +369,23 @@ aside ol {
     margin: 1em;
     margin-top: 0;
 }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%;
+    overflow: hidden;
+}
+
+.video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 /* Mobile Phones & Smaller Screens */
 @media screen and (max-width: 800px) {
