--- a/stylesheet.css
+++ b/stylesheet.css
@@ -386,6 +386,15 @@ aside ol {
     object-fit: cover;
 }
 
+section p span a {
+    display: inline;
+    padding: 0;
+    margin: 0;
+    color: #d84040;
+    text-decoration: underline;
+}
+
+
 
 /* Mobile Phones & Smaller Screens */
 @media screen and (max-width: 800px) {
